--- a/assets/stylesheet/main.css
+++ b/assets/stylesheet/main.css
@@ -2,7 +2,7 @@ body{
 	background-color: rgb(44, 62, 80);
 }
 
-.image-container{
+.container{
 	display:none;
 }
 
@@ -10,4 +10,24 @@ img{
 	margin-top: 5%;
 	max-height: 200px;
 	max-width: 200px;
+}
+
+#random-link-container{
+	margin-top: 10%;
+}
+
+a{
+	font-size: 20px;
+}
+
+a, a:hover, a:visited, a:link{
+	color:white;
+}
+
+a, a:hover, a:visited, a:active, a:link{
+	text-decoration:none;
+}
+
+a:active{
+	color:red;
 }
