--- a/assets/stylesheet/main.css
+++ b/assets/stylesheet/main.css
@@ -48,4 +48,12 @@ input{
 	border-radius: 50px;
 	border: 2px solid white;
 	color:white;
+	padding-left:5px;
+}
+
+.result-container{
+	background-color:inherit;
+	border: 1px solid white;
+	color: white;
+	margin-top: 5%;
 }
