--- a/assets/stylesheet/main.css
+++ b/assets/stylesheet/main.css
@@ -54,6 +54,9 @@ input{
 .result-container{
 	background-color:inherit;
 	border: 1px solid white;
+	border-radius: 10px;
 	color: white;
 	margin-top: 5%;
+	padding: 10px;
+	width: 100%;
 }
