--- a/assets/stylesheet/main.css
+++ b/assets/stylesheet/main.css
@@ -51,18 +51,27 @@ input{
 	padding-left:5px;
 }
 
+#results-container{
+	margin-top:5%;
+	margin-bottom:5%;
+}
+
 .result-container{
 	background-color:inherit;
 	border: 1px solid white;
 	border-radius: 10px;
 	color: white;
-	margin-top: 5%;
 	padding: 10px;
 	width: 100%;
 	display:none;
+	margin-top:1%;
+	padding-top: 50px;
+	padding-bottom: 50px;
+	font-size: 125%;
+	text-align:center;
 }
 
 .result-container:hover{
 	background-color:white;
-	color: #98ff98;
+	color: #40E0D0;
 }
