--- a/assets/stylesheet/main.css
+++ b/assets/stylesheet/main.css
@@ -2,7 +2,7 @@ body{
 	background-color: rgb(44, 62, 80);
 }
 
-.container{
+.container, #results-link, .result-container{
 	display:none;
 }
 
@@ -24,7 +24,7 @@ a{
 	font-size: 20px;
 }
 
-a, a:hover, a:visited, a:link{
+a, a:hover, a:visited, a:link, input, .result-container, p{
 	color:white;
 }
 
@@ -37,17 +37,14 @@ a:active{
 }
 
 p{
-	color:white;
 	font-size:20px;
 	margin-top: 2%;
 }
 
 input{
 	display:inline-block;
-	background-color:inherit;
 	border-radius: 50px;
 	border: 2px solid white;
-	color:white;
 	padding-left:5px;
 }
 
@@ -57,13 +54,10 @@ input{
 }
 
 .result-container{
-	background-color:inherit;
 	border: 1px solid white;
 	border-radius: 10px;
-	color: white;
 	padding: 10px;
 	width: 100%;
-	display:none;
 	margin-top:1%;
 	padding-top: 50px;
 	padding-bottom: 50px;
@@ -74,4 +68,8 @@ input{
 .result-container:hover{
 	background-color:white;
 	color: #40E0D0;
+}
+
+.result-container, input{
+	background-color:inherit;
 }
